test/expected/explain_sto_eq_i_v.out
explain static void operator=(int)
                  ^
19: error: operator "=" can not be "static"
